--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Then Emilia meets Wrath, one of the Wicked-princes of Hell she has been warned a
 
 <a href="https://www.amazon.in/Kingdom-Cursed-Kerri-Maniscalco-ebook/dp/B08R1H1Z92/ref=sr_1_1?keywords=kingdom+of+the+cursed&qid=1637148234&qsid=262-7593754-6388344&sr=8-1&sres=B08R1H1Z92%2CB09JGSDQCB%2CB09JHVPX2H%2CB07HRZD4JL%2CB08KBCZF1H%2CB08JDX79GJ%2CB08QSKYX71%2C1838594434%2C1781082405%2C1781083878%2CB082YFQJB1%2CB085XMV5LV%2CB07H2M2SD5%2CB08GD16JH2%2CB08FBJJFWH%2CB08MXTLX6Z&srpt=ABIS_EBOOKS">
 
-    <img src="/Users/mac/Desktop/Coding(Aahana)/Books i have read so far.html/Images/Kingdom of the Cursed.jpeg">
+    <img src="/BooksIHaveRead/Images/Kingdom of the Cursed.jpeg">
 </a>
 
 <u><h3><font color="Lightblue">My rating</font></h3></u>
@@ -176,7 +176,7 @@ Infinite deception with a side of revenge. Welcome to Hell.
    
 <a href="https://www.amazon.in/Legendborn-Tracy-Deonn/dp/1398501875/ref=sr_1_1?keywords=legendborn&qid=1637163280&qsid=262-7593754-6388344&sr=8-1&sres=1398501875%2C1398516775%2CB09KPTQBHQ%2C147141065X%2CB09JW2QG3W%2C0241532566%2C1526614677%2C1338671162%2C0008475253%2C1471187829%2C1526632799%2C1526621975%2C0008505594%2C1423140605%2CB08DRMLF84%2CB00C69IIVG&srpt=ABIS_BOOK">
 
-<img src="/Users/mac/Desktop/Coding(Aahana)/Books i have read so far.html/Images/Legendborn.jpeg" border="5" height="450" width="300" alt="click to see image">
+<img src="/BooksIHaveRead/Images/Legendborn.jpeg" border="5" height="450" width="300" alt="click to see image">
 </a>
 
 
@@ -240,7 +240,7 @@ She recruits Nick, a self exiled Legendborn with his own grudge against the grou
    
 <a href="https://www.amazon.in/Kill-Kingdom-Alexandra-Christo/dp/147140739X/ref=sr_1_1?crid=47SDE6RR74VW&keywords=to+kill+a+kingdom&qid=1637163784&qsid=262-7593754-6388344&sprefix=to+kill+a+kingdom%2Caps%2C288&sr=8-1&sres=147140739X%2C147141065X%2C1471407276%2C1408855704%2CB07SX1F3F8%2CB07H3XVMYD%2CB07WDWFMP7%2CB07MPGXGN9%2CB07BJ1HZKY%2CB07WFGT9YW%2CB008XK2LJC%2CB00UHT2LMY%2CB006G0VG8S%2CB003MQM782%2CB006BVTB1G%2CB009E99DRY&srpt=ABIS_BOOK">
 
-<img src="/Users/mac/Desktop/Coding(Aahana)/Books i have read so far.html/Images/To Kill a Kingdom.jpeg" border="5" height="450" width="300" alt="click to see image">
+<img src="/BooksIHaveRead/Images/To Kill a Kingdom.jpeg" border="5" height="450" width="300" alt="click to see image">
 </a>
 
 
@@ -293,7 +293,7 @@ The ocean is the only place Prince Elian calls home, even though he is heir to t
    
 <a href="https://www.amazon.in/Kill-Kingdom-Alexandra-Christo/dp/147140739X/ref=sr_1_1?crid=47SDE6RR74VW&keywords=to+kill+a+kingdom&qid=1637163784&qsid=262-7593754-6388344&sprefix=to+kill+a+kingdom%2Caps%2C288&sr=8-1&sres=147140739X%2C147141065X%2C1471407276%2C1408855704%2CB07SX1F3F8%2CB07H3XVMYD%2CB07WDWFMP7%2CB07MPGXGN9%2CB07BJ1HZKY%2CB07WFGT9YW%2CB008XK2LJC%2CB00UHT2LMY%2CB006G0VG8S%2CB003MQM782%2CB006BVTB1G%2CB009E99DRY&srpt=ABIS_BOOK">
 
-<img src="/Users/mac/Desktop/Coding(Aahana)/Books i have read so far.html/Images/Lore.jpeg" border="5" height="450" width="300" alt="click to see image">
+<img src="/BooksIHaveRead/Images/Lore.jpeg" border="5" height="450" width="300" alt="click to see image">
 </a>
 
 
@@ -346,7 +346,7 @@ The ocean is the only place Prince Elian calls home, even though he is heir to t
    
 <a href="https://www.amazon.in/Shadows-Between-Us-Tricia-Levenseller/dp/1250189969/ref=sr_1_1?crid=3PTI31G9BRVJ&keywords=the+shadows+between+us&qid=1637221144&qsid=262-7593754-6388344&sprefix=the+shadows+b%2Caps%2C305&sr=8-1&sres=1250189969%2C1542041864%2C0859741451%2C0916211908%2C1526626179%2CB098NKSJ8Z%2C9391165141%2C1848126476%2C0099570297%2C1510104461%2C0241435005%2C1526621975%2C1849838399%2CB01175KE0M%2CB00EVRHE8E%2CB08NWRTPSB&srpt=ABIS_BOOK">
 
-<img src="/Users/mac/Desktop/Coding(Aahana)/Books i have read so far.html/Images/The Shadows Between Us.jpeg" border="5" height="450" width="300" alt="click to see image">
+<img src="/BooksIHaveRead/Images/The Shadows Between Us.jpeg" border="5" height="450" width="300" alt="click to see image">
 </a>
 
 
@@ -406,7 +406,7 @@ But Alessandras not the only one trying to kill the king. As attempts on his lif
    
 <a href="https://www.amazon.in/Sorcery-Thorns-Margaret-Rogerson/dp/1481497618/ref=sr_1_1?crid=1MA1IP9R5C5GG&keywords=sorcery+of+thorns&qid=1637245333&qsid=262-7593754-6388344&sprefix=sorcery+of%2Caps%2C297&sr=8-1&sres=1481497618%2C1398507946%2C1481497596%2C0062989707%2CB08K7LKHJ3%2C0099570297%2CB0087DNHV6%2CB0031AI0E4%2CB01MU1O7JY%2CB00OYMBWOI%2CB00PHQJ73S%2CB00IKQZWSQ%2CB09LXJKYSM%2CB0096SGZ38%2CB0094A0X0Y%2CB00HE37QX0&srpt=ABIS_BOOK">
 
-<img src="/Users/mac/Desktop/Coding(Aahana)/Books i have read so far.html/Images/Sorcery of Thorns.jpeg" border="5" height="450" width="300" alt="click to see image">
+<img src="/BooksIHaveRead/Images/Sorcery of Thorns.jpeg" border="5" height="450" width="300" alt="click to see image">
 </a>
 
 
@@ -462,7 +462,7 @@ As her alliance with Nathaniel grows stronger, Elisabeth starts to question ever
    
 <a href="https://www.amazon.in/Six-Crows-Leigh-Bardugo/dp/1780622287/ref=sr_1_1?keywords=six+of+crows&qid=1637246198&qsid=262-7593754-6388344&sr=8-1&sres=1780622287%2CB07YHNQW8W%2C1780622317%2C1250211107%2C1250123569%2CB082ZSQN87%2CB0189AH0IW%2CB08QTLZDKY%2CB08Z79PB6Y%2CB09LDDZB3B%2C1510105247%2C1408855704%2C1471407276%2CB00JCQERXY%2C144729758X%2CB08268NB3R&srpt=ABIS_BOOK">
 
-<img src="/Users/mac/Desktop/Coding(Aahana)/Books i have read so far.html/Images/Six of crows.jpeg" border="5" height="450" width="300" alt="click to see image">
+<img src="/BooksIHaveRead/Images/Six of crows.jpeg" border="5" height="450" width="300" alt="click to see image">
 </a>
 
 
@@ -516,7 +516,7 @@ As her alliance with Nathaniel grows stronger, Elisabeth starts to question ever
    
 <a href="https://www.amazon.in/Six-Crows-Crooked-Kingdom-Book/dp/1780622317/ref=sr_1_1?crid=1AD68BVI6LKQ2&keywords=crooked+kingdom&qid=1637246878&qsid=262-7593754-6388344&sprefix=crooked+%2Caps%2C289&sr=8-1&sres=1780622317%2CB08PD5675C%2CB09GYF827K%2CB09GYF2MZD%2C1250211107%2C1250123569%2CB07T2534HD%2CB073HL37WV%2CB01N6IXZF3%2CB08QTLZDKY%2CB073PFH8HQ%2C1510105662%2C1510106286%2CB07GPHL9VK%2C1526614677%2CB08221DNLD&srpt=ABIS_BOOK">
 
-<img src="/Users/mac/Desktop/Coding(Aahana)/Books i have read so far.html/Images/Crooked Kingdom.jpeg" border="5" height="450" width="300" alt="click to see image">
+<img src="/BooksIHaveRead/Images/Crooked Kingdom.jpeg" border="5" height="450" width="300" alt="click to see image">
 </a>
 
 
@@ -573,7 +573,7 @@ A war will be waged on the citys dark and twisting streets. A battle for revenge
    
 <a href="https://www.amazon.in/Cruel-Prince-Folk-Air/dp/1471407276/ref=sr_1_1?crid=DAVILNVPZVXM&keywords=the+cruel+prince&qid=1637247154&qsid=262-7593754-6388344&sprefix=the+cruel%2Caps%2C301&sr=8-1&sres=1471407276%2C147141065X%2CB09GYFXF4W%2CB07YRDCNBC%2C1471408655%2CB0843K1ZFZ%2CB07SFV1PRH%2CB07TS1BKLT%2C1471409333%2CB09FZGT96R%2CB08RW7YWRQ%2CB08PZCT5WZ%2CB08TX2P895%2CB08BCSL87N%2CB08NZVXWBK%2CB08VNCXTMK&srpt=ABIS_BOOK">
 
-<img src="/Users/mac/Desktop/Coding(Aahana)/Books i have read so far.html/Images/The Cruel Prince.jpeg" border="5" height="450" width="300" alt="click to see image">
+<img src="/BooksIHaveRead/Images/The Cruel Prince.jpeg" border="5" height="450" width="300" alt="click to see image">
 </a>
 
 
@@ -635,7 +635,7 @@ As Jude becomes more deeply embroiled in palace intrigues and deceptions, she di
    
 <a href="https://www.amazon.in/Wicked-King-Folk-Air/dp/1471408655/ref=pd_sim_1/262-7593754-6388344?pd_rd_w=M1cOQ&pf_rd_p=df94e169-3083-47a5-b39e-0983bb578426&pf_rd_r=Z7Y650R8JCJMXVD32WVV&pd_rd_r=14a5103e-4b5d-408e-9eef-ec996eedfd47&pd_rd_wg=s0aYB&pd_rd_i=1471408655&psc=1">
 
-<img src="/Users/mac/Desktop/Coding(Aahana)/Books i have read so far.html/Images/The Wicked King.jpeg" border="5" height="450" width="300" alt="click to see image">
+<img src="/BooksIHaveRead/Images/The Wicked King.jpeg" border="5" height="450" width="300" alt="click to see image">
 </a>
 
 
@@ -690,7 +690,7 @@ When it becomes all too clear that someone close to Jude means to betray her, th
    
 <a href="https://www.amazon.in/Queen-Nothing-Folk-Air/dp/1471409333/ref=pd_sim_1/262-7593754-6388344?pd_rd_w=hmop2&pf_rd_p=df94e169-3083-47a5-b39e-0983bb578426&pf_rd_r=9VFS7GC67T8EAFKXA4XF&pd_rd_r=ac7e4c50-2e28-46fb-a7f9-bda8987c9b43&pd_rd_wg=xnSQ3&pd_rd_i=1471409333&psc=1">
 
-<img src="/Users/mac/Desktop/Coding(Aahana)/Books i have read so far.html/Images/The Queen of Nothing.jpeg" border="5" height="450" width="300" alt="click to see image">
+<img src="/BooksIHaveRead/Images/The Queen of Nothing.jpeg" border="5" height="450" width="300" alt="click to see image">
 </a>
 
 
@@ -751,7 +751,7 @@ And, when a dormant yet powerful curse is unleashed, panic spreads throughout th
    
 <a href="https://www.amazon.in/Once-Upon-Broken-Heart-1/dp/1250268397/ref=sr_1_2?keywords=once+upon+a+broken+heart&qid=1637248998&qsid=262-7593754-6388344&s=books&sr=1-2&sres=1250268397%2CB005BFJ5PK%2C9388810511%2C0143453580%2C9386407388%2C0063016656%2C8195181848%2C9389432936%2C9388369963%2C8171673406%2C9388810546%2C8172234988%2C8172235631%2CB06XHQRGGX%2CB08LCNS8ZD%2CB08F25NJJF&srpt=ABIS_BOOK">
 
-<img src="/Users/mac/Desktop/Coding(Aahana)/Books i have read so far.html/Images/Once Upon a Broken Heart.jpeg" border="5" height="450" width="300" alt="click to see image">
+<img src="/BooksIHaveRead/Images/Once Upon a Broken Heart.jpeg" border="5" height="450" width="300" alt="click to see image">
 </a>
 
 
