--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ opacity: 0.5;
    
 <a href="https://www.amazon.in/Kingdom-Wicked-1/dp/0316428469/ref=sr_1_1?keywords=kingdom+of+the+wicked&qid=1636983988&qsid=262-7593754-6388344&sr=8-1&sres=0316428469%2CB08R1H1Z92%2CB08Q6MQ79N%2CB09HXKNMFC%2CB086C8FF8L%2CB075HHNX1Y%2CB07CLGSSF5%2CB00VA5IO7U%2C147141065X%2CB09HXGB547%2CB0748M573F%2CB08GYFTV84%2CB071SB8S59%2CB06Y4J6JQ5%2CB06ZZ75XPR%2CB0057AHZ4W&srpt=ABIS_BOOK">
 
-<img src="/BooksIHaveRead/Images/Crooked Kingdom.jpeg" border="5" height="450" width="300" alt="click to see image">
+<img src="/BooksIHaveRead/Images/Kingdom of the wicked.png" border="5" height="450" width="300" alt="click to see image">
 </a>
 
 
