--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@ And, when a dormant yet powerful curse is unleashed, panic spreads throughout th
    
 <a href="https://www.amazon.in/Once-Upon-Broken-Heart-1/dp/1250268397/ref=sr_1_2?keywords=once+upon+a+broken+heart&qid=1637248998&qsid=262-7593754-6388344&s=books&sr=1-2&sres=1250268397%2CB005BFJ5PK%2C9388810511%2C0143453580%2C9386407388%2C0063016656%2C8195181848%2C9389432936%2C9388369963%2C8171673406%2C9388810546%2C8172234988%2C8172235631%2CB06XHQRGGX%2CB08LCNS8ZD%2CB08F25NJJF&srpt=ABIS_BOOK">
 
-<img src="/BooksIHaveRead/Images/The Wicked King.jpeg" border="5" height="450" width="300" alt="click to see image">
+<img src="/BooksIHaveRead/Images/Once Upon a Broken Heart.jpeg" border="5" height="450" width="300" alt="click to see image">
 </a>
 
 
